test/semantic-errors/21.pas
program p;
procedure f();
begin writeln(1)end;
begin f():=2;
end.
